--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "homepage": "https://github.com/your-username/m10c-team-profile-generator#readme",
   "dependencies": {
     "inquirer": "^9.1.5"
+  },
+  "devDependencies": {
+    "jest": "^29.5.0"
   }
 }
